OERC-55: Adjusting pages error message font size

--- a/src/pretalx/plugins/pretalx-pages/pretalx_pages/templates/pretalx_pages/show.html
+++ b/src/pretalx/plugins/pretalx-pages/pretalx_pages/templates/pretalx_pages/show.html
@@ -19,7 +19,7 @@
       {% include "agenda/header_row.html" with with_margin=True %}
       <p></p>
       {% if site_does_not_exist is True %}
-      <p class="text-center m-4">
+      <p class="text-center m-4 pretalx-page-error-message">
         Das Programm wird zur Zeit vorbereitet und ist noch nicht bereit. Bitte besuche uns erneut zu einem späteren Zeitpunkt.
       </p>
       {% else %}
