OERC-60 OERC-55: tags in submissions added, including hardcoded whitelist. Changed font size for error message in public voting plugin

--- a/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/public_submissionwish_list.html
+++ b/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/public_submissionwish_list.html
@@ -12,7 +12,7 @@
   {% include "agenda/header_row.html" with with_margin=True %}
 
   {% if plugin_deactivated is True %}
-    <p class="text-center m-4">
+    <p class="text-center m-4 pretalx-public-voting-error-message">
       Das Programm wird zur Zeit vorbereitet und ist noch nicht bereit. Bitte besuche uns erneut zu einem späteren Zeitpunkt.
     </p>
   {% else %}
