OERC-71: removing possibility to save draft on first page, because its profile page now

--- a/src/pretalx/cfp/templates/cfp/event/submission_base.html
+++ b/src/pretalx/cfp/templates/cfp/event/submission_base.html
@@ -53,10 +53,13 @@
                                     {% translate "Submit proposal!" %} &raquo;
                                 {% endif %}
                             </button>
+                            {% if prev_url %}
+                            <!-- because profile page is now on first page, we will not allow to save a draft. -->
                             <button type="submit" class="btn btn-link text-center" name="action" value="draft">
                                 {% translate "or save as draft for now" %}
                                 <i class="fa fa-question-circle" data-toggle="tooltip" title="{% translate "You can save your proposal as a draft and submit it later. Organisers will not be able to see your proposal, though they will be able to send you reminder emails about the upcoming deadline." %}"></i>
                             </button>
+                            {% endif %}
                         {% endif %}
                     </div>
                     <div class="col-md-3">
