--- a/src/pretalx/agenda/templates/agenda/talk.html
+++ b/src/pretalx/agenda/templates/agenda/talk.html
@@ -64,10 +64,22 @@
                 </div>
             </div>
             <small>
-                {% if talk_slots|length == 1 %}
-                    {{ talk_slots.0.start|date:DAY_MONTH_DATE_FORMAT }}, {{ talk_slots.0.start|date:"TIME_FORMAT" }}–{{ talk_slots.0.end|date:"TIME_FORMAT" }} ({{ request.event.timezone }}), {{ talk_slots.0.room.name }} {% if talk_slots.0.room.description %}<i class="fa fa-question-circle" data-toggle="tooltip" title="{{ talk_slots.0.room.description }}"></i>{% endif %}
+              {% if talk_slots|length == 1 %}
+                {{ talk_slots.0.start|date:"d.m.Y" }},
+                {% if talk_slots.0.end %}
+                  {{ talk_slots.0.start|date:"H:i" }}–{{ talk_slots.0.end|date:"H:i" }} {% trans "o'clock" %}
+                {% else %}
+                  {{ talk_slots.0.start|date:"H:i" }} {% trans "o'clock" %}
                 {% endif %}
-                {% if request.event.is_multilingual and request.event.cfp.request_content_locale %}
+                ({{ request.event.timezone }}),
+                {{ talk_slots.0.room.name }}
+                {% if talk_slots.0.room.description %}
+                  <i class="fa fa-question-circle" data-toggle="tooltip" title="{{ talk_slots.0.room.description }}"></i>
+                {% endif %}
+              {% endif %}
+
+
+              {% if request.event.is_multilingual and request.event.cfp.request_content_locale %}
                     <div class="speakers">
                         <strong>{{ phrases.base.language }}:</strong> {{ submission.get_content_locale_display }}
                     </div>
