OERC-75: slightly fixing questions tab when submission type or track is not set

--- a/src/pretalx/cfp/templates/cfp/event/submission_base.html
+++ b/src/pretalx/cfp/templates/cfp/event/submission_base.html
@@ -52,6 +52,7 @@
                                 {% else %}
                                     {% translate "Submit proposal!" %} &raquo;
                                 {% endif %}
+                                {{ next_url }}
                             </button>
                             {% if prev_url %}
                             <!-- because profile page is now on first page, we will not allow to save a draft. -->
