--- a/src/pretalx/cfp/templates/cfp/event/submission_questions.html
+++ b/src/pretalx/cfp/templates/cfp/event/submission_questions.html
@@ -27,9 +27,17 @@
         {% has_perm 'orga.edit_cfp' request.user request.event as can_edit_cfp %}
         {% if can_edit_cfp %}{% orga_edit_link request.event.cfp.urls.questions %}{% endif %}
     </div>
-    <p>
+    {% if not form.submission_fields and not form.speaker_fields %}
+      <p class="pt-3 pb-3">
+        <strong>
+          {% translate "There are no additional questions for your submission." %}
+        </strong>
+      </p>
+    {% else %}
+      <p>
         {{ text|rich_text }}
-    </p>
+      </p>
+    {% endif %}
     {% if form.submission_fields %}
         {% if form.speaker_fields and form.submission_fields %}
             <h4>{% translate "… about your proposal:" %}</h4>
