--- a/src/pretalx/agenda/templates/agenda/header_row.html
+++ b/src/pretalx/agenda/templates/agenda/header_row.html
@@ -21,13 +21,13 @@
         </a>
         -->
         <a href="{{ request.event.urls.page_public_voting }}" class="btn btn-outline-success {% if "/p/voting/public/talks" in request.path %} active{% endif %}">
-          <i class="fa fa-comment-o"></i> Einreichungen
+          <i class="fa fa-comment-o"></i> {{ phrases.schedule.submissions }}
         </a>
         <a href="{{ request.event.urls.page_public_voting_wishes }}" class="btn btn-outline-success {% if "/p/voting/public/wishes" in request.path %} active{% endif %}">
-          <i class="fa fa-comment-o"></i> Themenwünsche
+          <i class="fa fa-comment-o"></i> {{ phrases.schedule.submission_wishes }}
         </a>
         <a href="{{ request.event.urls.page_sponsors }}" class="btn btn-outline-success {% if "/page/kooperation/" in request.path %} active{% endif %}">
-          <i class="fa fa-group"></i> Kooperationspartner*innen
+          <i class="fa fa-group"></i> {{ phrases.schedule.cooperation_partners }}
         </a>
         {% if request.event.is_venueless_world_enabled %}
         <a href="{{ request.event.urls.venueless_embedded }}" class="btn btn-outline-success {% if "/venueless/" in request.path %} active{% endif %}">
